Fix nav menu on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,11 @@ a.anchor {
     color: #96989b;
     background-color: #dddedf;
   }
+  .navbar-nav > li > a {
+  	height: 40px;
+    line-height: 40px;
+    padding-top: 5px;
+    padding-bottom: 5px;}
 }
 
 /********** Splash screen **********/
